fix: PL content update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="section">
                     <p class="fave__title fave-PL">Favorite PL</h3>
                     <p class="fave__body fave-PL-body">
-                        CMSC 123. It was very challenging to the point that i cried over it. However, I learned a lot and enjoyed the topics.
+                        C. I have already taken two courses that uses C. With that I am more comfortable using it comapred with other PL.
                     </p>
                 </div>
     
