feat: add hobbies and childhood dream

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     <p class="fave__body fave-Food-body">My favorite food is Ramen because it keeps me feel warm, and it is very flavorful.</p>
                 </div>
             </div>
+
+            <div class="hobbies">Hobbies: <span id="hobbies-body">Playing Guitar, Valorant, Cook, Play rubics cube, binge watch series</span></div>
+            <div class="childhood-dream">Childhood Dream: <span id="dream-body">My childhood dream is to be a Lawyer</span></div>
         </div>
 
         <div class="picture"></div>
